gh-pages integration

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "testreenbit",
-  "homepage": "https://fleddd.github.io/testreenbit-client",
+  "homepage": "https://fleddd.github.io/testreenbit-client/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
